Load environment variables from GitHub Secrets in CI pipeline for testing

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,14 +17,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Set environment variables from GitHub Secrets
+      run: |
+        echo "MY_ACCOUNT_SID=${{ secrets.MY_ACCOUNT_SID }}" >> $GITHUB_ENV
+        echo "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" >> $GITHUB_ENV
+        echo "MY_TWILIO_NUMBER=${{ secrets.MY_TWILIO_NUMBER }}" >> $GITHUB_ENV
+        echo "SEND_SMS_TO=${{ secrets.SEND_SMS_TO }}" >> $GITHUB_ENV
+        echo "EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }}" >> $GITHUB_ENV
+        echo "EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}" >> $GITHUB_ENV
+        echo "DEFAULT_FROM_EMAIL=${{ secrets.DEFAULT_FROM_EMAIL }}" >> $GITHUB_ENV
+        echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> $GITHUB_ENV
+        echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> $GITHUB_ENV
+        echo "STRIPE_PUBLIC_KEY=${{ secrets.STRIPE_PUBLIC_KEY }}" >> $GITHUB_ENV
+        echo "STRIPE_PRIVATE_KEY=${{ secrets.STRIPE_PRIVATE_KEY }}" >> $GITHUB_ENV
+        echo "GOOGLE_AUTH_CLIENT_ID=${{ secrets.GOOGLE_AUTH_CLIENT_ID }}" >> $GITHUB_ENV
+        echo "GOOGLE_AUTH_CLIENT_SECRET=${{ secrets.GOOGLE_AUTH_CLIENT_SECRET }}" >> $GITHUB_ENV
+        echo "REDIS_HOST=${{ secrets.REDIS_HOST }}" >> $GITHUB_ENV
+        echo "REDIS_PORT=${{ secrets.REDIS_PORT }}" >> $GITHUB_ENV
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r eCommercePlatform/requirements.txt
+
     - name: Run Tests
       run: |
         cd eCommercePlatform
